Fix Calculator "Reset Gags" Button Alignment

--- a/src/features/gag/components/gags-picker/index.module.css
+++ b/src/features/gag/components/gags-picker/index.module.css
@@ -74,6 +74,7 @@
   min-height: 2.25rem;
   text-align: center;
 }
+.gagsPicker.desktop h3 { width: 100%; }
 /* "Choose Gags" Text */
 .gagsPicker h3 span { 
   display: block;
